# clone_voice

./: .gitignore  index.html  install_sidecar_windows.bat  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1770919512747-8f12a93da4f828.mjs
sidecar/: copy_dlls.bat  create_icons.py  main.py  main.spec  requirements.txt  voice-engine.spec
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
