[package]
name = "clone_voice"
version = "0.1.0"
description = "A voice cloning tool using Coqui TTS"
authors = ["namng"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "fs-all", "dialog-all", "process-all", "shell-open", "process-command-api", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
